--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Hello world</p>
+    <h1>Hello world</h1>
+    <h1>Hey there</h1>
+    <p>Lorem ipsum dolor sit amet. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, sint provident? Laboriosam, nisi! Id saepe corrupti eveniet, quas ut incidunt velit nam. Earum rerum impedit ducimus cum excepturi dolor pariatur. </p>
   </body>
 </html>
