margin and padding

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
    <div>
     <h1>hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio itaque doloribus odio earum, consequuntur quo voluptas error ducimus dolorem provident ab numquam voluptatem impedit nam obcaecati molestias nisi blanditiis.</p>
+    </div>
+   <div>
+    <h1>hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio itaque doloribus odio earum, consequuntur quo voluptas error ducimus dolorem provident ab numquam voluptatem impedit nam obcaecati molestias nisi blanditiis.</p>
     </div>
     
   </body>
