--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
   </head>
   <body>
   
-   <div>
+   <div class="parent">
     <h1>hello world</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio itaque doloribus odio earum, consequuntur quo voluptas error ducimus dolorem provident ab numquam voluptatem impedit nam obcaecati molestias nisi blanditiis.</p>
+    </div>
+   <div class="parent">
+    <h1>hello world</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio itaque doloribus odio earum, consequuntur quo voluptas error ducimus dolorem provident ab numquam voluptatem impedit nam obcaecati molestias nisi blanditiis.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio itaque doloribus odio earum, consequuntur quo voluptas error ducimus dolorem provident ab numquam voluptatem impedit nam obcaecati molestias nisi blanditiis.</p>
+    </div>
+   <div class="parent">
+    <h1>hello world</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio itaque doloribus odio earum, consequuntur quo voluptas error ducimus dolorem provident ab numquam voluptatem impedit nam obcaecati molestias nisi blanditiis.</p>
     </div>
     
