css text formatting

--- a/index.html
+++ b/index.html
@@ -8,18 +8,10 @@
   </head>
   <body>
   
-   <div class="parent">
-    <h1>hello world</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio itaque doloribus odio earum, consequuntur quo voluptas error ducimus dolorem provident ab numquam voluptatem impedit nam obcaecati molestias nisi blanditiis.</p>
-    </div>
-   <div class="parent">
-    <h1>hello world</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio itaque doloribus odio earum, consequuntur quo voluptas error ducimus dolorem provident ab numquam voluptatem impedit nam obcaecati molestias nisi blanditiis.</p>
-    </div>
-   <div class="parent">
-    <h1>hello world</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio itaque doloribus odio earum, consequuntur quo voluptas error ducimus dolorem provident ab numquam voluptatem impedit nam obcaecati molestias nisi blanditiis.</p>
-    </div>
-    
+   <h1>Hello world</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat quam quaerat mollitia cum, assumenda ut odio nemo, iste suscipit ad officia porro repellendus nisi quae id pariatur illum eius dignissimos error. Quod ipsam impedit ut id dicta, culpa assumenda facere?</p>
+    <h2 class="one">Ahsan <img src="./bg.jpeg" width="8px" height="8px" alt=""> Habib</h2>
+    <h2 class="text-top">Ahsan <img src="./bg.jpeg" width="8px" height="8px" alt=""> Habib</h2>
+    <h2 class="text-bottom">Ahsan <img src="./bg.jpeg" width="8px" height="8px" alt=""> Habib</h2>
   </body>
 </html>
