--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   </head>
   <body>
   
-   <h1>Hello world</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat quam quaerat mollitia cum, assumenda ut odio nemo, iste suscipit ad officia porro repellendus nisi quae id pariatur illum eius dignissimos error. Quod ipsam impedit ut id dicta, culpa assumenda facere?</p>
-    <h2 class="one">Ahsan <img src="./bg.jpeg" width="8px" height="8px" alt=""> Habib</h2>
-    <h2 class="text-top">Ahsan <img src="./bg.jpeg" width="8px" height="8px" alt=""> Habib</h2>
-    <h2 class="text-bottom">Ahsan <img src="./bg.jpeg" width="8px" height="8px" alt=""> Habib</h2>
+  <h1>Hello world</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa inventore id quisquam ducimus voluptates amet earum pariatur cupiditate doloremque a.</p>
+  <h3>Ahsan Habib</h3>
   </body>
 </html>
