--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" ></link>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Document</title>
   </head>
   <body>
@@ -11,5 +12,6 @@
   <h1>Hello world</h1>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa inventore id quisquam ducimus voluptates amet earum pariatur cupiditate doloremque a.</p>
   <h3>Ahsan Habib</h3>
+  <i class="fa-brands fa-facebook"></i>
   </body>
 </html>
