--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <title>Document</title>
   </head>
   <body>
+  <a href="">Ahsan Habib</a>
+  <a href="" class="btn">Click Me</a>
   
-  <h1>Hello world</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa inventore id quisquam ducimus voluptates amet earum pariatur cupiditate doloremque a.</p>
-  <h3>Ahsan Habib</h3>
-  <i class="fa-brands fa-facebook"></i>
   </body>
 </html>
