--- a/index.html
+++ b/index.html
@@ -8,13 +8,32 @@
     <title>Document</title>
   </head>
   <body>
-  <h1>List</h1>
-  <ul>
-    <li>Lorem, ipsum dolor.</li>
-    <li>Lorem, ipsum dolor.</li>
-    <li>Lorem, ipsum dolor.</li>
-    <li>Lorem, ipsum dolor.</li>
-  </ul>
+ <table>
+  <thead>
+    <tr>
+      <td>Name</td>
+      <td>Age</td>
+      <td>Skill</td>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Ahsan</td>
+      <td>49</td>
+      <td>Cycling</td>
+    </tr>
+    <tr>
+      <td>Habib</td>
+      <td>58</td>
+      <td>Cycling</td>
+    </tr>
+    <tr>
+      <td>Volga</td>
+      <td>41</td>
+      <td>Cycling</td>
+    </tr>
+  </tbody>
+ </table>
   
   </body>
 </html>
