--- a/index.html
+++ b/index.html
@@ -1,39 +1,12 @@
 <!DOCTYPE html>
-<link lang="en">
-  <link>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" ></link>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
   <body>
- <table>
-  <thead>
-    <tr>
-      <td>Name</td>
-      <td>Age</td>
-      <td>Skill</td>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Ahsan</td>
-      <td>49</td>
-      <td>Cycling</td>
-    </tr>
-    <tr>
-      <td>Habib</td>
-      <td>58</td>
-      <td>Cycling</td>
-    </tr>
-    <tr>
-      <td>Volga</td>
-      <td>41</td>
-      <td>Cycling</td>
-    </tr>
-  </tbody>
- </table>
-  
+    <h1>Hello world</h1>
   </body>
 </html>
