--- a/index.html
+++ b/index.html
@@ -4,123 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello world</h1>
-    <div class="main">
-      <div class="child"></div>
-    </div>
-    <div class="sec"></div>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed consequatur
-      hic adipisci omnis laborum tempora quaerat error expedita voluptates
-      rerum. Quae eius commodi fugit, illum laboriosam iure temporibus dicta.
-      Itaque aut aliquam incidunt veniam cumque adipisci eligendi explicabo
-      minus illum optio? Debitis quibusdam similique, necessitatibus quaerat
-      porro eligendi totam suscipit rerum veritatis numquam nam repudiandae
-      reprehenderit et voluptatum id modi deserunt, ullam perferendis
-      repellendus aliquam. Magni laboriosam, excepturi maiores enim alias
-      accusamus sit esse, molestiae nulla qui, consectetur quasi porro provident
-      recusandae ab. Atque recusandae inventore deleniti facilis modi aperiam
-      consequatur voluptate nihil voluptatem, non dolorum adipisci quae
-      expedita, illo sapiente id qui suscipit a quidem perferendis consequuntur
-      in sunt doloremque. Veniam, numquam inventore deserunt non, praesentium
-      assumenda aliquam sapiente quibusdam omnis quidem saepe ut architecto
-      reprehenderit hic ea. Ducimus deserunt itaque ab et dolor corporis vitae
-      quo repellendus, modi nostrum voluptate numquam maxime dicta facilis nisi
-      aperiam laboriosam nam quaerat mollitia cum tempore obcaecati ratione?
-      Facere voluptates culpa consectetur natus eaque iure aliquid. Et ratione
-      quaerat deserunt placeat reprehenderit alias quidem, numquam pariatur
-      necessitatibus iure non temporibus officia excepturi voluptate aliquid
-      maxime beatae error illo sequi sint doloribus repellendus doloremque
-      quibusdam eos. Ad voluptatum quia architecto neque. Dignissimos quaerat
-      ad, ipsum fugiat est alias impedit minus, corrupti esse maiores eos harum
-      omnis quos fugit quae commodi nihil quidem ab vitae reprehenderit
-      similique maxime nostrum et. Voluptatum provident aut pariatur vitae
-      ratione optio exercitationem perspiciatis, qui alias incidunt ullam
-      eligendi quia possimus maxime sint libero tempore necessitatibus quasi
-      delectus atque. Magnam consequatur id veritatis adipisci a sapiente?
-      Distinctio architecto dolorum recusandae veniam consequatur laborum,
-      dignissimos enim nisi! Qui, laboriosam laudantium, minus explicabo aut
-      harum doloremque itaque ex doloribus debitis ipsa eligendi maxime. Eaque
-      praesentium corrupti tempore facere incidunt vitae quasi eos? Odit, iste
-      minima commodi vitae ad itaque at rerum deleniti? Odit quae laboriosam
-      ullam iste suscipit! Cupiditate aliquam animi accusamus porro excepturi at
-      tempora aliquid maxime, mollitia vitae fugiat adipisci! Autem ullam
-      impedit beatae assumenda, minus doloribus architecto, ipsa ab repellat,
-      aliquid sit expedita? Velit placeat necessitatibus sequi aspernatur
-      dignissimos. Cum eaque neque ullam, maxime repellendus corrupti nam omnis
-      ducimus doloremque tenetur saepe, modi asperiores sunt, repellat
-      architecto itaque unde autem molestiae ipsam totam. Perspiciatis quia sit
-      ratione quae, dicta laborum praesentium voluptate cum, nemo amet odio
-      fugit ad eveniet porro corrupti iure blanditiis reiciendis autem ipsum
-      excepturi beatae. Ducimus maiores quis ad adipisci praesentium officiis
-      necessitatibus, reprehenderit autem voluptate, fugit nostrum pariatur et
-      corporis, inventore quod atque! Minima, quas exercitationem? Consectetur
-      eaque saepe suscipit! Aperiam rerum perspiciatis consequuntur natus
-      reiciendis officiis aliquam, quaerat earum ratione inventore nemo a,
-      magnam blanditiis deserunt. Mollitia laborum assumenda quae voluptas nemo,
-      itaque eius nulla qui totam ducimus dolorum cum repudiandae quas
-      voluptates perferendis veniam facere modi consequuntur inventore nobis
-      tempore placeat temporibus fugit. Autem ab provident quos velit iusto
-      quibusdam? Veritatis iure, libero tempora voluptatum doloremque ipsum
-      nobis possimus ipsa dolorum in saepe eum et, nesciunt architecto
-      reprehenderit asperiores dolorem? Ipsam sint fugit amet nesciunt quam
-      voluptates rem eos odit consequuntur libero animi quaerat suscipit illo
-      expedita unde, culpa sapiente tempora earum repellendus recusandae aliquam
-      vel id! Sed illum voluptas nobis ipsam totam ratione suscipit corrupti
-      laudantium eos necessitatibus? Maxime impedit eligendi laboriosam
-      inventore qui quidem a ea pariatur itaque rem at vel rerum reiciendis
-      adipisci neque enim praesentium asperiores quaerat hic quod obcaecati,
-      magnam nam quibusdam? Debitis dignissimos provident laudantium nemo
-      recusandae. Alias minima fuga doloremque ullam error, repudiandae beatae
-      numquam laudantium pariatur, dignissimos, officia facere. Doloribus, ullam
-      iste asperiores sint accusamus aliquid reiciendis, ad expedita temporibus
-      voluptatum quia earum sequi, placeat consequatur laboriosam rerum illo
-      deserunt enim aspernatur! Corporis, dolores impedit? Laudantium natus
-      maiores nobis asperiores cumque possimus omnis vitae amet perferendis
-      beatae id, illo quibusdam incidunt cum, voluptatibus adipisci officiis
-      iure labore aut! Fuga, ipsa. Cupiditate tempora iste error vero quam
-      excepturi possimus sed id blanditiis ipsa praesentium repellat commodi,
-      veritatis hic dolorum, natus nemo. Aperiam ratione eveniet voluptas vero?
-      At officiis velit, magnam quaerat dolores impedit a nesciunt laudantium
-      deserunt dicta modi reprehenderit eveniet hic. Tenetur quidem accusantium,
-      modi eveniet culpa laborum, alias officiis sunt optio voluptatem illo sint
-      doloribus ipsam reiciendis assumenda. Cum distinctio esse ex tempora, ab,
-      porro at vero fugit, incidunt unde excepturi error minus harum ratione
-      nostrum repellat consequatur praesentium aut. Provident earum, vitae
-      quisquam in nobis ea mollitia voluptate illum placeat cum, at natus
-      explicabo error? Quidem vel animi eaque deleniti sunt in iste adipisci
-      expedita ducimus, quam, sapiente dolores distinctio quod fugit quia! Iste
-      fugiat consequuntur dolor blanditiis, laborum non tempore modi quasi
-      voluptatibus nemo, explicabo rem delectus quisquam labore in accusantium
-      veritatis autem eius maiores perferendis odit ipsa facilis? Vitae, dolor
-      voluptas. Reiciendis illum accusantium necessitatibus aliquam dicta
-      praesentium natus placeat dolorum dolor quod, nobis voluptate minima
-      adipisci magni sunt veritatis esse blanditiis, ipsam accusamus repudiandae
-      vero quo, animi deserunt nihil? Modi recusandae et ratione ipsum ut animi
-      iusto rem consectetur, itaque culpa doloribus minus quo aperiam, quaerat,
-      repellat expedita libero accusamus nesciunt dolore quas quae velit
-      maiores. Vel consequatur ut quibusdam soluta voluptate inventore quae
-      molestias, quaerat ipsam odit molestiae deleniti architecto? Assumenda eos
-      numquam soluta quae nostrum at dicta possimus labore. Aliquam minima nisi
-      voluptatem harum ratione nihil voluptate illum, unde quasi enim reiciendis
-      animi magnam, cupiditate possimus dolore itaque! Aliquam ea magnam optio
-      perspiciatis! Illo aliquam aspernatur molestiae? Minima magni odit
-      sapiente inventore nesciunt quos aperiam asperiores unde dolorem, delectus
-      at ut consectetur cupiditate nam fuga magnam laboriosam ex alias, ad
-      necessitatibus laborum dolore eveniet dignissimos explicabo! Libero
-      voluptate animi ad vero, nobis dolor nesciunt dolore illo sunt blanditiis
-      quo iure veritatis temporibus aliquid velit recusandae expedita quam porro
-      sint pariatur deserunt laborum iste ea. Reiciendis veritatis culpa quas
-      tempora deserunt quia, ratione unde necessitatibus consectetur quam
-      facere! Quos veniam iure amet nisi? Aliquid porro atque deleniti est,
-      soluta vel vitae harum hic enim quasi magni non corrupti aperiam tempora
-      molestiae animi eius, necessitatibus velit? Quaerat earum in debitis
-      numquam, reiciendis perferendis voluptatibus eligendi sequi tempore
-      quisquam mollitia amet laboriosam maiores nesciunt soluta quis dolorem
-      molestiae? Obcaecati, totam?
-    </p>
+    <nav id="main_menu">
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About us</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li>
+          <a href="">Service</a>
+          <ul>
+            <li><a href="">Dropdown Menu</a></li>
+            <li><a href="">Dropdown Menu</a></li>
+            <li><a href="">Dropdown Menu</a></li>
+            <li><a href="">Dropdown Menu</a></li>
+          </ul>
+        </li>
+        <li><a href="">Testimonial</a></li>
+        <li><a href="">Blog</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
