create css form

--- a/index.html
+++ b/index.html
@@ -13,23 +13,47 @@
     <title>Document</title>
   </head>
   <body>
-    <nav id="main_menu">
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About us</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li>
-          <a href="">Service</a>
-          <ul>
-            <li><a href="">Dropdown Menu</a></li>
-            <li><a href="">Dropdown Menu</a></li>
-            <li><a href="">Dropdown Menu</a></li>
-            <li><a href="">Dropdown Menu</a></li>
-          </ul>
-        </li>
-        <li><a href="">Testimonial</a></li>
-        <li><a href="">Blog</a></li>
-      </ul>
-    </nav>
+    <div class="contact">
+      <h2>Level up you brand</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores,
+        dolores.
+      </p>
+      <from>
+        <div class="child_form">
+          <label for="name">Enter your name</label>
+          <input type="text" name="name" placeholder="Your name" />
+        </div>
+        <div class="child_form">
+          <label for="email">Enter your email</label>
+          <input type="email" name="email" placeholder="Your email" />
+        </div>
+        <div class="child_form">
+          <label for="country">Country</label>
+          <select name="country" id="">
+            <option value="bd">Bangladesh</option>
+            <option value="in">India</option>
+            <option value="pk">Pakistan</option>
+          </select>
+        </div>
+        <div class="child_form">
+          <label for="phone">Enter your Phone number</label>
+          <input type="number" name="phone" placeholder="Your phone number" />
+        </div>
+        <div class="child_form">
+          <label for="message">How can we help?</label>
+          <textarea
+            name=""
+            placeholder="Your message"
+            id=""
+            cols="30"
+            rows="10"
+          ></textarea>
+        </div>
+        <div class="child_form">
+          <input type="button" value="Send Message" />
+        </div>
+      </from>
+    </div>
   </body>
 </html>
