--- a/facebook/index.html
+++ b/facebook/index.html
@@ -8,45 +8,69 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="main">
-      <section class="first-section">
-        <img
-          class="fb-img"
-          src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg"
-          alt="Facebook"
-        />
-        <h2>
-          Facebook helps you connect and share with the people in your life.
-        </h2>
-      </section>
-      <section>
-        <div class="login-form">
-          <form action="">
-            <input
-              class="form-input"
-              type="text"
-              placeholder="Email address or phone number"
-            />
-            <input class="form-input" type="password" placeholder="Password" />
-            <input class="btn-login" type="button" value="Log in" />
-            <div class="forgot-pass-div">
-              <a class="forgot-pass" href="">Forgotten password?</a>
-            </div>
-            <hr />
-            <div class="create-account">
+    <div class="container">
+      <div class="main">
+        <section class="first-section">
+          <img
+            class="fb-img"
+            src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg"
+            alt="Facebook"
+          />
+          <h2>
+            Facebook helps you connect and share with the people in your life.
+          </h2>
+        </section>
+        <section>
+          <div class="login-form">
+            <form action="">
               <input
-                class="btn-create-account"
-                type="button"
-                value="Create new account"
+                class="form-input"
+                type="text"
+                placeholder="Email address or phone number"
               />
-            </div>
-          </form>
+              <input
+                class="form-input"
+                type="password"
+                placeholder="Password"
+              />
+              <input class="btn-login" type="button" value="Log in" />
+              <div class="forgot-pass-div">
+                <a class="forgot-pass" href="">Forgotten password?</a>
+              </div>
+              <hr />
+              <div class="create-account">
+                <input
+                  class="btn-create-account"
+                  type="button"
+                  value="Create new account"
+                />
+              </div>
+            </form>
+          </div>
+          <div class="create-page-div">
+            <a class="create-page" href="">Create a Page</a> for a celebrity,
+            band or business.
+          </div>
+        </section>
+      </div>
+      <footer id="footer_area">
+        <div class="container">
+          <ul>
+            <li><a href="">English (UK)</a></li>
+            <li><a href="">বাংলা</a></li>
+            <li><a href="">অসমীয়া</a></li>
+            <li><a href="">हिन्दी</a></li>
+            <li><a href="">नेपाली</a></li>
+            <li><a href="">Bahasa Indonesia</a></li>
+            <li><a href="">العربية</a></li>
+            <li><a href="">中文(简体)</a></li>
+            <li><a href="">Bahasa Melayu</a></li>
+            <li><a href="">Español</a></li>
+            <li><a href="">Português (Brasil)</a></li>
+          </ul>
+          <p>Meta © 2023</p>
         </div>
-        <div class="create-page-div">
-          <a class="create-page" href="">Create a Page</a> for a celebrity, band
-          or business.
-        </div>
-      </section>
+      </footer>
     </div>
   </body>
 </html>
