--- a/001 10.0-Display-Grid/10.0 Display Grid/index.html
+++ b/001 10.0-Display-Grid/10.0 Display Grid/index.html
@@ -8,6 +8,7 @@
       /* My colours for white: #f0d9b5, black: #b58863 */
       .container {
         display: grid;
+        width: 800px;
         grid-template-columns: repeat(8, 1fr);
         grid-template-rows: repeat(8, 1fr);
       }
